Adresse : Card bug - Padding for not scrollbar

--- a/style.css
+++ b/style.css
@@ -748,7 +748,7 @@
     flex-shrink: 0;
     flex-basis: 450px;
     flex: 1 0 250px;
-    margin: 0px 15px 0px 0px;
+    margin: 15px;
     scroll-snap-align: start;
   }
   #top-adresses .carousel-items {
